# quickthink

./: .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FOLDER_MAP.md  Makefile  README.md  SECURITY.md  SUPPORT.md  llms.txt  pyproject.toml
.githooks/: pre-commit  pre-push
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependency-review.yml  release-check.yml  release-supply-chain.yml  scorecard.yml
docs/: AGENT_BOOTSTRAP.md  GETTING_STARTED.md  KNOWN_LIMITATIONS.md  MARKDOWN_INDEX.md  MARKDOWN_SYSTEM.md  PUBLIC_CLAIMS_POLICY.md  README.md  SESSION_CLOSEOUT_CHECKLIST.md  TROUBLESHOOTING.md  VERSION_NOTES.md  compatibility_matrix.md
docs/agent-comms/: CONSOLIDATION_PREP_NOTES_2026-02-18.md  DISCUSSION_PROMPT_2026-02-18.md  MAINTENANCE_NOTES_2026-02-18.md  README.md  ROUNDTABLE_2026-02-18.md  TASK_QUEUE.md  THREAD.md  VARIANT_GATE_REVIEW.md  log.jsonl
docs/demo/: QUICK_DEMO.md
docs/evals/: AGENT_HANDOFF.md  README.md  deployment_gate_2026.md  failure_modes.md  harness_spec.md  prompt_set.jsonl  prompt_set_edge_cases.jsonl  scoring_rubrics.md
docs/release/: OPEN_SOURCE_RELEASE_READINESS_CHECKLIST.md  OSS_READINESS_SCORECARD_2026-02-25.md  OSS_STANDARDS_ALIGNMENT_2026.md  PRE_CLEANUP_SNAPSHOT_NOTE_2026-02-20.md  PUBLIC_REPO_SCOPE.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_DRAFT.md  RELEASE_PROCESS.md  REPO_STRUCTURE_AND_PUBLISHABILITY_AUDIT_2026-02-20.md  SUPPLY_CHAIN_BASELINE_2026.md  USER_FACING_DOC_REVIEW_2026-02-20.md
docs/research/: DECISION_GATES.md  GTM_TIER_DECISION_MEMO_2026-02-26.md  MASTER_PROJECT_STATUS_AND_COMMERCIALIZATION_2026-02-26.md  MODEL_DEFAULTS_AND_GUARDRAILS_2026-02-26.md  QUICKTHINK_DELOITTE_STYLE_STRATEGY_BOOK_2026-02-26.md  RESEARCH_HYGIENE_PROTOCOL.md  (+10 more)
research/: README.md  RESULTS-SUMMARY-002c.md  RESULTS-SUMMARY-002d.md  RESULTS-SUMMARY-003.md
scripts/: agent_bootstrap.sh  check_research_hygiene.sh
tests/: test_cli_lane_policy.py  test_engine_lane_policy.py  test_eval_harness_safety.py  test_inline_protocol.py  test_make_gate_decision.py  test_plan_grammar.py  test_presets.py  test_prompts.py  test_routing.py  test_ui_lane_policy.py  test_ui_server_paths.py
(+89 files in other folders)
