[project]
name = "quickthink"
version = "0.2.0"
description = "Compressed planning scaffold for local LLMs"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "quickthink contributors"}
]
license = {text = "Apache-2.0"}
dependencies = [
  "httpx>=0.27.0",
  "typer>=0.12.0",
  "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
quickthink = "quickthink.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
