[project]
name = "quickthink"
version = "0.2.0"
description = "Compressed planning scaffold for local LLMs — latency-aware routing and structured output reliability"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "Rolando Bosch", email = "rbosch@lpci.ai"},
]
license = {text = "Apache-2.0"}
keywords = [
  "llm",
  "local-llm",
  "ollama",
  "inference",
  "scaffold",
  "routing",
  "agent",
  "structured-output",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.27.0",
  "typer>=0.12.0",
  "pydantic>=2.7.0",
]

[project.urls]
Homepage = "https://hermes-labs.ai"
Repository = "https://github.com/hermes-labs-ai/quickthink"
Issues = "https://github.com/hermes-labs-ai/quickthink/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.4.0",
]

[project.scripts]
quickthink = "quickthink.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
